feat:delete endpoint csrf
